button borders are causing the minical to shift right under kronolithBody. Remove border until another fix presents itself

--- a/kronolith/themes/screen.css
+++ b/kronolith/themes/screen.css
@@ -428,6 +428,7 @@ body.kronolithAjax {
 }
 #kronolithMenu .button {
 	padding: 1px 2px;
+	border: 0;
 }
 #kronolithMenuCalendars {
     position: absolute;
